honour 'inherit' for background colour of form controls in strict mode.

BUG: 33776

svn path=/trunk/KDE/kdelibs/; revision=627988